--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -59,3 +59,17 @@ typings/
 
 # next.js build output
 .next
+
+# local env files
+.env.local
+.env.*.local
+
+# Editor directories and files
+.idea
+
+# IDE
+*.iml
+
+# other
+.DS_Store
+/dist
