--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
+    "@types/marked": "^0.6.5",
     "@vue/cli-plugin-typescript": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "antlr4ts-cli": "^0.5.0-alpha.3",
     "license-checker": "^25.0.1",
+    "marked": "^0.6.2",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.5.21"
   },
