--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jssha": "^2.0.0",
     "@types/lz-string": "^1.3.33",
     "antlr4ts": "^0.5.0-alpha.3",
+    "chota": "^0.6.2",
     "core-js": "^2.6.5",
     "jssha": "^2.3.1",
     "lz-string": "^1.4.4",
