--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "webpack-env"
     ],
     "paths": {
+      "vue-analytics": ["src/types/vue-analytics"],
       "@/*": [
         "src/*"
       ]
