--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lz-string": "^1.4.4",
     "roughjs": "^3.1.0",
     "vue": "^2.6.10",
+    "vue-awesome": "^4.0.2",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.6"
