--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "snippets": "tsc --outDir ./dist/ && node dist/tools/tools.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@types/jssha": "^2.0.0",
     "@types/lz-string": "^1.3.33",
     "antlr4ts": "^0.5.0-alpha.3",
